Update git ignore list.

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,26 @@ cabal-dev
 .virthualenv
 _cache
 _site
+.shake
+.stack-work
+__*
+*.cabal
+node_modules
+*.fsdb
+*.comp.yaml
+*.track.yaml
+*.jsexe
+*.js_hi
+*.js_o
+*.js_dyn_hi
+*.js_dyn_o
+*.swo
+*.swn
+*.swm
+*.prof
+*.dump-splices
+result
+
+**/_build/**
+**/_static/**
+**/_template/**
