--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^4.1.0",
-    "font-awesome": "^4.7.0"
+    "et-book": "https://github.com/edwardtufte/et-book",
+    "font-awesome": "^4.7.0",
+    "tufte-css": "https://github.com/edwardtufte/tufte-css",
+    "tufte-pandoc-css": "https://github.com/jez/tufte-pandoc-css"
   },
   "devDependencies": {
     "css-loader": "^0.28.4",
