Define package with package.dhall.

--- a/camp-hog.cabal
+++ b/camp-hog.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.yaml by hpack version 0.31.0.
+-- This file has been generated from package.dhall by hpack version 0.31.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: b4d405958daa9a3c923cd689e096f920d9e3cb2ad568e24ee3cc38f7b6a265ca
+-- hash: fb57adbaf3cdb917d7d7f0c2f98b64cdb5843ba7bea65c93d7523620e99a1771
 
 name:           camp-hog
 version:        1.0.0
@@ -12,20 +12,23 @@ synopsis:       blockscope.com
 description:    Static site generator for blockscope.com
 category:       web
 homepage:       https://github.com/blockscope/blockscope/tree/develop#readme
-bug-reports:    https://github.com/BlockScope/blockscope/issues
+bug-reports:    https://github.com/blockscope/blockscope/issues
 author:         Phil de Joux
 maintainer:     phil.dejoux@blockscope.com
-license:        BSD3
+copyright:      © 2017-2018 Phil de Joux, © 2017-2018 Block Scope Limited
+license:        MPL-2.0
 license-file:   LICENSE.md
+tested-with:    GHC == 8.2.2
 build-type:     Simple
 extra-source-files:
+    package.dhall
     package.yaml
-    stack.yaml
-    LICENSE.md
+    changelog.md
+    README.md
 
 source-repository head
   type: git
-  location: https://github.com/BlockScope/blockscope
+  location: https://github.com/blockscope/blockscope
 
 executable site
   main-is: site.hs
@@ -33,7 +36,8 @@ executable site
       Paths_camp_hog
   hs-source-dirs:
       CampHog
-  ghc-options: -Wall
+  default-extensions: PackageImports
+  ghc-options: -Wall -Werror
   build-depends:
       base
     , blaze-html
@@ -49,9 +53,11 @@ test-suite hlint
   hs-source-dirs:
       ./.
       test-suite-hlint
-  ghc-options: -Wall -rtsopts -threaded -with-rtsopts=-N
+  default-extensions: PackageImports
+  ghc-options: -Wall -Werror
   build-depends:
       base
+    , blaze-html
     , hakyll
     , hlint
     , pandoc
