--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,25 @@
 dist
+dist-*
 cabal-dev
 *.o
 *.hi
 *.chi
 *.chs.h
-.virthualenv
+*.dyn_o
+*.dyn_hi
+.hpc
+.hsenv
+.cabal-sandbox/
+cabal.sandbox.config
+*.prof
+*.aux
+*.hp
+*.eventlog
+.stack-work*
+cabal.project.local
+cabal.project.local~
+.HTF/
+.ghc.environment.*
 _cache
 _site
 .shake
@@ -28,5 +43,5 @@ result
 **/_template/**
 
 *.log
-**/CampHog/css/**
+**/www-hakyll/css/**
 *.tgz
