--- a/camp-hog.cabal
+++ b/camp-hog.cabal
@@ -1,10 +1,10 @@
 cabal-version: 1.12
 
--- This file has been generated from package.dhall by hpack version 0.31.1.
+-- This file has been generated from package.dhall by hpack version 0.31.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: aacbce22528897c97634ca820519d7c76368dd458739ba7cb7ff804f816bf0cf
+-- hash: b161196956e849571babcddd7760668fefe3bf50fc6c6fce46cd9db6675ebab3
 
 name:           camp-hog
 version:        1.0.0
@@ -41,6 +41,7 @@ executable site
   build-depends:
       base
     , blaze-html
+    , filepath
     , hakyll
     , pandoc
   default-language: Haskell2010
