--- a/package.json
+++ b/package.json
@@ -1,26 +1,24 @@
 {
-  "name": "task-view",
-  "version": "0.1.0",
-  "auther": "Phil de Joux",
-  "license": "ISC",
+  "name": "blockscope",
+  "packageManager": "yarn@3.0.0",
   "dependencies": {
-    "automated-a11y-sass": "blockscope/automated-a11y-sass",
-    "bootstrap": "^4.1.0",
+    "automated-a11y-sass": "./automated-a11y-sass",
+    "bootstrap": "^5.0.2",
     "font-awesome": "^4.7.0",
     "typeface-et-book": "^0.0.2"
   },
   "devDependencies": {
-    "css-loader": "^3.2.0",
-    "file-loader": "^4.2.0",
-    "imports-loader": "^0.8.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.13.0",
-    "sass-loader": "^8.0.0",
-    "style-loader": "^1.0.0",
-    "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0"
+    "css-loader": "^6.2.0",
+    "file-loader": "^6.2.0",
+    "imports-loader": "^3.0.0",
+    "mini-css-extract-plugin": "^2.1.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^12.1.0",
+    "style-loader": "^3.2.1",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.47.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
     "pack": "webpack",
