--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
   "name": "blockscope",
-  "packageManager": "yarn@3.0.0",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "automated-a11y-sass": "./automated-a11y-sass",
@@ -10,20 +9,9 @@
     "typeface-et-book": "^0.0.2"
   },
   "devDependencies": {
-    "css-loader": "^6.2.0",
-    "file-loader": "^6.2.0",
-    "imports-loader": "^3.0.0",
-    "mini-css-extract-plugin": "^2.1.0",
-    "node-sass": "^6.0.1",
-    "sass-loader": "^12.1.0",
-    "style-loader": "^3.2.1",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "sass": "^1.43.4"
   },
   "scripts": {
-    "pack": "webpack",
-    "start": "webpack-dev-server"
+    "style": "sass app.sass:css/app.css --load-path ./node_modules"
   }
 }
