--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "blockscope",
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^6.0.0",
-    "automated-a11y-sass": "./automated-a11y-sass",
-    "bootstrap": "^4.1.0",
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "@popperjs/core": "^2.11.5",
+    "automated-a11y-sass": "link:automated-a11y-sass",
+    "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
-    "popper.js": "^1.14.0",
     "typeface-et-book": "^0.0.2"
   },
   "devDependencies": {
-    "sass": "^1.43.4"
+    "sass": "^1.51.0"
   },
   "scripts": {
     "style": "sass app.sass:css/app.css --load-path ./node_modules"
